--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,12 +2,12 @@
 
 - title: Home
   url: /
-- title: Posts
-  url: /posts/
-- title: Categories
-  url: /categories/
-- title: Tags
-  url: /tags/
+- title: Basecamp
+  url: /basecamp/
+# - title: HEY
+#   url: /hey/
+# - title: ONCE
+#   url: /once/
 # - title: Recipes
 #   url: /recipes/
 - title: Search
